# bia-integrator

bia-ingest-shared-models/: pyproject.toml
bia-ingest-shared-models/bia_ingest_sm/: biostudies.py  conversion.py  shared_models.py
bia-ingest-shared-models/test/: test_create_study_with_new_model.py  test_shared_models.py  utils.py
bia-ingest-shared-models/test/data/: S-BIADTEST.json
bia-shared-datamodels/src/bia_models/: bia_data_model.py  semantic_models.py
